--- a/Bloxstrap/Resources/Strings.resx
+++ b/Bloxstrap/Resources/Strings.resx
@@ -387,7 +387,7 @@ Click for more information</value>
   <data name="Enums.BootstrapperStyle.VistaDialog" xml:space="preserve">
     <value>Vista (2008 - 2011)</value>
   </data>
-  <data name="Enums.BootstrapperStyle.YeezusDialog" xml:space="preserve">
+  <data name="Enums.BootstrapperStyle.Yeezus" xml:space="preserve">
     <value>Yeezus (2024)</value>
   </data>
   <data name="Enums.BootstrapperStyle.TerminalDialog" xml:space="preserve">
