--- a/Bloxstrap/Resources/Strings.resx
+++ b/Bloxstrap/Resources/Strings.resx
@@ -1032,5 +1032,5 @@ Selecting 'No' will ignore this warning and continue installation.</value>
   </data>
   <data name="Enums.BootstrapperStyle.SynapseXDialog" xml:space="preserve">
     <value>SynapseX (2024)</value>
-  <data>
+  </data>
 </root>
